--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,4 +136,5 @@ dependencies {
     implementation files('libs/hellocharts-library-1.5.8.jar')
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'org.litepal.android:core:2.0.0'
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
